# InformationFlow

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
configs/: entropy_set.toml
include/: config.hpp  const_inst_emulator.hpp  entropy.hpp  entropy.tpp  entropy_map.hpp  entropy_map_graph.hpp  entropy_map_path_printer.hpp  fuzz_engine.hpp  hashing.hpp  hashing.tpp  if_randgen.hpp  instr_emulator-typemap.hpp  instr_emulator.hpp  instr_emulator.tpp  llvm_gen-names.hpp  llvm_gen.hpp  main.hpp  randgen.hpp  randgen.tpp  reader-basicblock.hpp  reader.hpp
include/entropy_eval/: config.hpp  main.hpp  result.hpp  runner.hpp  tests.hpp  tests.tpp
include/entropy_eval2/: config.hpp  entropy.hpp  result.hpp  runner.hpp  runner.tpp  tests.hpp  tests.tpp  utils.hpp
include/llvm_gen/: llvm_gen-names.hpp  llvm_gen.hpp
notes/: 01-memory_access.md  llvm_instrs.ods
notes/LatexNotes/: Makefile
notes/LatexNotes/BinaryOpMaxEntropy/: notes.tex
notes/LatexNotes/BranchingUncertaintyCoefficient/: notes.bib  notes.tex
notes/LatexNotes/EntropyProofs/: notes.tex
notes/LatexNotes/LLVMOpsDiscussion/: notes.bib  notes.tex
notes/LatexNotes/UncertaintyCoefficientCheckSketch/: notes.tex
scripts/: compile.sh  count_fn_defs.sh  do_clang_format.sh  make_ctags.sh  make_third_party_em_stats.sh  run_entropy_eval.sh  run_path_tests-third_party.sh  run_tests-envs.sh  run_tests.sh
scripts/Docker/: Dockerfile  docker-build.sh
src/: CMakeLists.txt  config.cpp  const_inst_emulator.cpp  entropy.cpp  entropy_map.cpp  entropy_map_graph.cpp  entropy_map_path_printer.cpp  fuzz_engine.cpp  instr_emulator.cpp  instr_snippets.ll  llvm_gen.cpp  main.cpp  randgen.cpp  reader-basicblock.cpp  reader.cpp
src/cmake/: if_analyse.cmake  llvm_gen.cmake
src/entropy_eval/: CMakeLists.txt  common.h  entropy_eval-float.c  entropy_eval-float.h  entropy_eval-float_bool.c  entropy_eval-float_bool.h  entropy_eval-int.c  entropy_eval-int.h  entropy_eval-int_cmp.c  entropy_eval-int_cmp.h  entropy_eval-thread.c  entropy_eval-thread.h  entropy_eval-thread_cast.h  entropy_eval-thread_unary.c  entropy_eval.c  entropy_eval.h  main.cpp  plot.jl  plot2.jl  result.cpp  runner.cpp  tests.cpp  utils.cpp
src/entropy_eval2/: CMakeLists.txt  config.hpp  entropy.cpp  entropy.hpp  main.cpp  main.hpp  plot2.jl  result.cpp  result.hpp  runner.cpp  runner.hpp  runner.tpp  tests.cpp  utils.cpp
src/llvm_gen/: CMakeLists.txt  llvm_gen-names.cpp  llvm_gen.cpp
src/path_flow/: CMakeLists.txt  path_flow_test.c  path_flow_test.h
src/path_flow_2/: CMakeLists.txt  pf2.cpp  pf2.hpp
tests/: CMakeLists.txt  entropy-add_raw.cpp  entropy-coin_flip.cpp  entropy-dice_roll.cpp  entropy-func_loss-exec.ll-src  entropy-func_loss.cpp  llvm-entropy_graph.cpp  llvm-entropy_map.cpp  llvm-entropy_map_path_printer.cpp  llvm-parse.cpp  minimal-branch.ll-src  minimal-cycle.ll-src  minimal.ll-src  sample.c  sample.ll-src  simple-add.ll-src  simple-arith.ll-src  simple-cycle-double.ll-src  simple-cycle-early-ret.ll-src  simple-cycle.ll-src  simple-entropies.cpp  simple-struct.ll  simple-vector.ll-src  test_harness.hpp
